--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,11 @@
     <% if current_user %>
       <!-- current_user will return true if a user is logged in -->
       <%= "Logged in as #{current_user.email}" %> | <%= link_to 'Home', root_path %> | <%= link_to 'Balances', '/balances' %> | <%= link_to 'Log Out', logout_path, method: :delete %>
+      <% if current_user.admin? %>
+        <div class="admin_bar">
+          Admin Menu: <%= link_to 'Balance Adjustments', balance_adjustments_path %>
+        </div>
+      <% end %>
     <% else %>
       <!-- not logged in -->
       <%= link_to 'Home', root_path %> | <%= link_to 'Log In', login_path %> or <%= link_to 'Sign Up', new_user_path %>
