--- a/app/views/admin/balance_adjustments/_form.html.erb
+++ b/app/views/admin/balance_adjustments/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: balance_adjustment, local: true) do |form| %>
+<%= form_with(model: [:admin, balance_adjustment], local: true) do |form| %>
   <% if balance_adjustment.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(balance_adjustment.errors.count, "error") %> prohibited this balance_adjustment from being saved:</h2>
