--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,10 +12,10 @@
   </head>
 
   <body>
-    <p>NewArt Technology</p>
+    <p><%= link_to 'NewArt Technology', root_path %></p>
     <% if current_user %>
       <!-- current_user will return true if a user is logged in -->
-      <%= "Logged in as #{current_user.email}" %> | <%= link_to 'Home', root_path %> | <%= link_to 'Balances', '/balances' %> | <%= link_to 'Withdrawals', '/withdrawals' %> | <%= link_to 'Log Out', logout_path, method: :delete %>
+      <%= "Logged in as #{current_user.email}" %> | <%= link_to 'Balances', '/balances' %> | <%= link_to 'Withdrawals', '/withdrawals' %> | <%= link_to 'Log Out', logout_path, method: :delete %>
       <% if current_user.admin? %>
         <div class="admin_bar">
           Admin Menu: <%= link_to 'Balance Adjustments', admin_balance_adjustments_path %>
@@ -23,7 +23,7 @@
       <% end %>
     <% else %>
       <!-- not logged in -->
-      <%= link_to 'Home', root_path %> | <%= link_to 'Log In', login_path %> or <%= link_to 'Sign Up', new_user_path %>
+      <%= link_to 'Log In', login_path %> or <%= link_to 'Sign Up', new_user_path %>
     <% end %>
     <hr>
     
