continue work on withdrawals

--- a/app/views/withdrawals/show.html.erb
+++ b/app/views/withdrawals/show.html.erb
@@ -1,8 +1,8 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Symbol:</strong>
-  <%= @withdrawal.symbol %>
+  <strong>Coin:</strong>
+  <%= @withdrawal.coin_id %>
 </p>
 
 <p>
