update welcome page

--- a/app/views/pages/welcome.html.erb
+++ b/app/views/pages/welcome.html.erb
@@ -1,3 +1,1 @@
-<h1>NewArt Technology Service Center</h1>
-
-<p>Your best partner for Security Tokens and Shitcoins</p>
+<h1>Welcome to the NewArt Technology Token Service Center</h1>
