--- a/app/views/withdrawals/index.html.erb
+++ b/app/views/withdrawals/index.html.erb
@@ -5,7 +5,7 @@
 <table>
   <thead>
     <tr>
-      <th>Symbol</th>
+      <th>Coin</th>
       <th>User</th>
       <th>Receiver address</th>
       <th>Transaction</th>
@@ -23,7 +23,7 @@
   <tbody>
     <% @withdrawals.each do |withdrawal| %>
       <tr>
-        <td><%= withdrawal.symbol %></td>
+        <td><%= withdrawal.coin_id %></td>
         <td><%= withdrawal.user_id %></td>
         <td><%= withdrawal.receiver_address %></td>
         <td><%= withdrawal.transaction_id %></td>
