--- a/app/views/pages/balances.html.erb
+++ b/app/views/pages/balances.html.erb
@@ -1,4 +1,4 @@
-<h1>Your Balances</h1>
+<h1>My Balances</h1>
 
 <%# TODO: use vuex to store balance in global state and stop render ERB templates %>
 <% for id, balance in current_user.balances %>
