Change from password to authentication by magic link

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,18 +4,15 @@
     <title>NewArt Technology</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
-
     <%#= javascript_pack_tag 'balances' %>
   </head>
-
   <body>
     <p><%= link_to 'NewArt Technology', root_path %></p>
     <% if current_user %>
       <!-- current_user will return true if a user is logged in -->
-      <%= "Logged in as #{current_user.email}" %> | <%= link_to 'Balances', '/balances' %> | <%= link_to 'Withdrawals', '/withdrawals' %> | <%= link_to 'Log Out', logout_path, method: :delete %>
+      <%= "Logged in as #{current_user.email}" %> | <%= link_to 'Balances', '/balances' %> | <%= link_to 'Withdrawals', '/withdrawals' %> | <%= link_to 'Log Out', '/sign_out', method: :delete %>
       <% if current_user.admin? %>
         <div class="admin_bar">
           Admin Menu: <%= link_to 'Balance Adjustments', admin_balance_adjustments_path %> | <%= link_to 'Platforms', admin_platforms_path %> | <%= link_to 'Withdrawals', admin_withdrawals_path %>
@@ -23,18 +20,15 @@
       <% end %>
     <% else %>
       <!-- not logged in -->
-      <%= link_to 'Log In', login_path %> or <%= link_to 'Sign Up', new_user_path %>
+      <%= link_to 'Log In', '/sign_in' %> or <%= link_to 'Sign Up', new_user_path %>
     <% end %>
     <hr>
-    
     <% if notice %>
       <%= notice %>
     <% end %>
-
     <% if alert %>
       <%= alert %>
     <% end %>
-
     <%= yield %>
   </body>
 </html>
