--- a/app/views/admin/balance_adjustments/show.html.erb
+++ b/app/views/admin/balance_adjustments/show.html.erb
@@ -1,8 +1,8 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Coin:</strong>
-  <%= @balance_adjustment.coin_id %>
+  <strong>Asset:</strong>
+  <%= @balance_adjustment.asset_id %>
 </p>
 
 <p>
