--- a/app/views/user_mailer/withdrawal_submitted_email.text.erb
+++ b/app/views/user_mailer/withdrawal_submitted_email.text.erb
@@ -2,7 +2,7 @@ Hello,
 
 we have received a withdrawal request from your account.
 
-Coin: <%= @withdrawal.coin.name %>
+Asset: <%= @withdrawal.asset.name %>
 Amount: <%= @withdrawal.amount %>
 
 You can view the status of the transfer here:
