--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -3,8 +3,8 @@
 <table>
   <thead>
     <tr>
-      <th>Buying Coin</th>
-      <th>Selling Coin</th>
+      <th>Buying Asset</th>
+      <th>Selling Asset</th>
       <th>Amount</th>
       <th>Rate</th>
       <th>Filled</th>
@@ -15,8 +15,8 @@
   <tbody>
     <% @orders.each do |order| %>
       <tr>
-        <td><%= order.buying_coin %></td>
-        <td><%= order.selling_coin %></td>
+        <td><%= order.buying_asset %></td>
+        <td><%= order.selling_asset %></td>
         <td><%= order.amount %></td>
         <td><%= order.rate %></td>
         <td><%= order.filled %></td>
