--- a/app/views/pages/balances.html.erb
+++ b/app/views/pages/balances.html.erb
@@ -3,7 +3,7 @@
 <%# TODO: use vuex to store balance in global state and stop render ERB templates %>
 <% for id, balance in current_user.balances %>
   <div class="balance">
-    <%= Coin.find(id).name %>: <%= balance %>
-    <%= link_to "Withdraw", new_withdrawal_path(withdrawal: {coin_id: id})%>
+    <%= Asset.find(id).name %>: <%= balance %>
+    <%= link_to "Withdraw", new_withdrawal_path(withdrawal: {asset_id: id})%>
   </div>
 <% end %>
