--- a/app/views/pages/balances.html.erb
+++ b/app/views/pages/balances.html.erb
@@ -1,9 +1,19 @@
 <h1>My Balances</h1>
 
 <%# TODO: use vuex to store balance in global state and stop render ERB templates %>
-<% for id, balance in current_user.balances %>
-  <div class="balance">
-    <%= Asset.find(id).name %>: <%= balance %>
-    <%= link_to "Withdraw", new_withdrawal_path(withdrawal: {asset_id: id})%>
-  </div>
-<% end %>
+<table>
+  <tr>
+    <th>Asset</th>
+    <th>Balance</th>
+  </tr>
+  <% for asset in Asset.all %>
+    <tr>
+      <td><%= asset.name %></td>
+      <td><%= current_user.balances[asset.id] || 0 %></td>
+      <td>
+        <%= link_to "Withdraw", new_withdrawal_path(withdrawal: {asset_id: asset.id})%> |
+        <%= link_to "Deposit", new_deposit_path(asset_id: asset.id)%>
+      </td>
+    </tr>
+  <% end %>
+</table>
