--- a/app/views/user_mailer/authorization_code.text.erb
+++ b/app/views/user_mailer/authorization_code.text.erb
@@ -1,6 +1,6 @@
 To login click the link below:
 
-<%= edit_authorization_code_url(@token, email: @user.email) %>
+<%= root_url(auth_code: @token, email: @user.email) %>
 
 This link will expire in two hours.
 
