--- a/app/views/authorization_codes/edit.html.erb
+++ b/app/views/authorization_codes/edit.html.erb
@@ -1,6 +1,3 @@
 <h1>Editing Authorization Code</h1>
-
 <%= render 'form', authorization_code: @authorization_code %>
-
-<%= link_to 'Show', @authorization_code %> |
-<%= link_to 'Back', authorization_codes_path %>
+<%= link_to 'Back', root_url %>
