--- a/app/views/authorization_codes/new.html.erb
+++ b/app/views/authorization_codes/new.html.erb
@@ -1,5 +1,3 @@
 <h1>New Authorization Code</h1>
-
 <%= render 'form', authorization_code: @authorization_code %>
-
-<%= link_to 'Back', authorization_codes_path %>
+<%= link_to 'Back', root_url %>
