cleanup auth code

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,7 @@
       </div>
     <% else %>
       <!-- not logged in -->
-      <%= link_to 'Log In', login_path %> or <%= link_to 'Sign Up', new_user_path %>
+      <%= link_to 'Log In', login_path %>
     <% end %>
     <hr>
     
