Add mailer to send email when user click create authorization code button

--- a/app/views/user_mailer/authorization_code.text.erb
+++ b/app/views/user_mailer/authorization_code.text.erb
@@ -1,6 +1,6 @@
 To login click the link below:
 
-<%= root_url(auth_code: @token, email: @user.email) %>
+<%= root_url(auth_code: @auth_code, email: @user.email) %>
 
 This link will expire in two hours.
 
