--- a/app/views/user_mailer/withdrawal_submitted_email.text.erb
+++ b/app/views/user_mailer/withdrawal_submitted_email.text.erb
@@ -6,6 +6,6 @@ Asset: <%= @withdrawal.asset.name %>
 Amount: <%= @withdrawal.amount %>
 
 You can view the status of the transfer here:
-<%= @withdrawal.tx_url %>
+<%= @withdrawal.transaction_url %>
 
 Thank you for trading with NewArt Technology
