--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,7 @@
     <p><%= link_to 'OTC', '/orders' %></p>
     <% if current_user %>
       <div class="user">
-        <%= "Logged in as #{current_user.email}" %> | <%= link_to 'My Balances', '/balances' %> | <%= link_to 'My Withdrawals', '/withdrawals' %> | <%= link_to 'Log Out', logout_path, method: :delete %>
+        <%= "Logged in as #{current_user.email}" %> | <%= link_to 'My Balances', '/balances' %> | <%= link_to 'Account History', '/balance_adjustments' %> | <%= link_to 'Log Out', logout_path, method: :delete %>
       </div>
     <% else %>
       <!-- not logged in -->
