cleanup stuff, add token creation

--- a/app/views/pages/welcome.html.erb
+++ b/app/views/pages/welcome.html.erb
@@ -1,1 +1,5 @@
-<h1>Welcome to NewArt Technology</h1>
+<div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
+  <h1 class="display-4">Welcome to NewArt Technology</h1>
+  <p class="lead">The world's first and only self-regulated security token exchange.</p>
+  <a href="/assets/new" class="btn btn-lg btn-outline-primary">Create Token</a>
+</div>
