--- a/app/views/authorization_codes/_form.html.erb
+++ b/app/views/authorization_codes/_form.html.erb
@@ -14,6 +14,6 @@
     <%= form.text_field :email %>
   </div>
   <div class="actions">
-    <%= form.submit %>
+    <%= form.submit "Send me the link" %>
   </div>
 <% end %>
