--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
   <head>
     <title>NewArt Technology</title>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
@@ -14,6 +14,8 @@
     <%= javascript_tag do %>
       __INITIAL_STATE__= {
         assets: <%= raw Asset.all.to_json(only: [:id, :name], methods: [:symbol, :explorer_url]) %>,
+        platforms: <%= raw Platform.all.to_json(only: [:id], methods: [:name]) %>,
+        authenticity_token: <%= raw form_authenticity_token.to_json %>,
         <% if current_user %>
           balances: <%= raw current_user.cached_balances_json %>
         <% end %>
@@ -30,8 +32,18 @@
         Admin Menu: <%= link_to 'Balance Adjustments', admin_balance_adjustments_path %> | <%= link_to 'Platforms', admin_platforms_path %> | <%= link_to 'Withdrawals', admin_withdrawals_path %> | <%= link_to 'Assets', admin_assets_path %>
       </div>
     <% end %>
-    <h1><%= link_to 'NewArt Technology', root_path %></h1>
-    <p><%= link_to 'OTC', '/orders' %></p>
+
+    <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
+      <h5 class="my-0 mr-md-auto font-weight-normal"><%= link_to 'NewArt Technology', root_path %></h5>
+      <nav class="my-2 my-md-0 mr-md-3">
+        <%# = link_to 'Orders', '/orders', class: 'p-2 text-dark' %>
+        <%# <a class="p-2 text-dark" href="#">Enterprise</a> %>
+        <%# <a class="p-2 text-dark" href="#">Support</a> %>
+        <%# <a class="p-2 text-dark" href="#">Pricing</a> %>
+      </nav>
+      <%# <a class="btn btn-outline-primary" href="#">Create Token</a> %>
+    </div>
+    
     <% if current_user %>
       <div class="user">
         <%= "Logged in as #{current_user.email}" %> | <%= link_to 'My Balances', '/balances' %> | <%= link_to 'Account History', '/balance_adjustments' %> | <%= link_to 'Log Out', logout_path, method: :delete %>
