--- a/app/views/pages/welcome.html.erb
+++ b/app/views/pages/welcome.html.erb
@@ -1,5 +1,5 @@
 <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
   <h1 class="display-4">Welcome to NewArt Technology</h1>
-  <p class="lead">The world's first and only self-regulated security token exchange.</p>
-  <a href="/assets/new" class="btn btn-lg btn-outline-primary">Create Token</a>
+  <p class="lead">Introducing the world's first self-regulating cross-platform security token exchange.</p>
+  <a href="/assets/new" class="btn btn-lg btn-outline-primary">Create Security Token</a>
 </div>
