--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -1,11 +1,10 @@
 .field_with_errors {
-  padding: 2px;
-  background-color: red;
-  display: table;
+  .form-control {
+    border-color: red;
+  }
 }
 
 #error_explanation {
-  width: 450px;
   border: 2px solid red;
   padding: 7px 7px 0;
   margin-bottom: 20px;
