--- a/app/views/pages/welcome.html.erb
+++ b/app/views/pages/welcome.html.erb
@@ -1,5 +1,13 @@
-<div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
+<div class="px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
   <h1 class="display-4">Welcome to NewArt Technology</h1>
   <p class="lead">Introducing the world's first self-regulating cross-platform security token exchange.</p>
-  <a href="/assets/new" class="btn btn-lg btn-outline-primary">Create Security Token</a>
+  <a href="/token_studio" class="btn btn-lg btn-outline-primary">Create Security Token</a>
+  
+    or <%= link_to 'submit existing token', new_asset_path %>
+  
+</div>
+
+<div class="px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
+  <h1 class="display-4">Featured Assets</h1>
+  <a href="/assets" class="btn btn-lg btn-outline-primary">Browse all assets</a>
 </div>
