--- a/app/views/user_mailer/authorization_code.text.erb
+++ b/app/views/user_mailer/authorization_code.text.erb
@@ -1,7 +1,7 @@
-To login click the link below:
+Please click the link below to access your dashboard:
 
-<%= root_url(auth_code: @auth_code, email: @user.email) %>
+<%= root_url(auth_code: @auth_code) %>
 
 This link will expire in two hours.
 
-If you did not request login, please ignore this email.
+If you did not request this email, please ignore it.
