--- a/app/views/authorization_codes/_form.html.erb
+++ b/app/views/authorization_codes/_form.html.erb
@@ -12,7 +12,7 @@
   <br/>
   <div class="row form-group">
     <div class="col-sm-4">
-      <%= form.email_field :email, :placeholder =>:email, :required => true, class: "form-control"%>
+      <%= form.email_field :email, :placeholder =>:email, :required => true, class: "form-control", type: "email" %>
     </div>
     <div class="col-sm-3">
       <%= form.submit "Send me the link", class: "btn btn-primary"%>
