--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,6 +35,16 @@
 
     <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
       <h5 class="my-0 mr-md-auto font-weight-normal"><%= link_to 'NewArt Technology', root_path %></h5>
+      <div class="dropdown">
+        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <%= I18n.locale %>
+        </button>
+        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+          <%= link_to 'English', {locale: 'en'}, class: 'dropdown-item' %>
+          <%= link_to 'Japanese', {locale: 'ja'}, class: 'dropdown-item' %>
+        </div>
+      </div>
+      </script>
       <nav class="my-2 my-md-0 mr-md-3">
         <% if current_user %>
           <%= "Logged in as #{current_user.email}" %>
@@ -69,11 +79,12 @@
         <div class="row">
           <div class="col-12 col-md">
             <%= image_tag 'logo.png', class: 'mb-2', width: 24, height: 24 %>
-            <small class="d-block mb-3 text-muted">© 2018</small>
+            <small class="d-block mb-3 text-muted">Coypright © 2018 NewArt Technology Co., Ltd.</small>
           </div>
           <div class="col-6 col-md">
-            <h5>About</h5>
+            <h5>Company</h5>
             <ul class="list-unstyled text-small">
+              <li><%= link_to 'Contact', page_url(:contact), class: 'text-muted' %></li>
             </ul>
           </div>
           <div class="col-6 col-md">
